# MLops_emotions

./: .gitignore  Makefile  README.md  data.dvc  entrypoint.sh  main.py  models.dvc  pyproject.toml  requirements.txt  vertex_ai_config.yaml
.dvc/: .gitignore  config
.github/workflows/: format.yml  tests.yml
app/: main.py
config/: config.yaml
config/experiment/: exp1.yaml
data/processed/test/: data-00000-of-00001.arrow  state.json
data/processed/train/: data-00000-of-00001.arrow  state.json
data/processed/validation/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/raw/dair-ai___emotion/split/1.0.0/cca5efe2dfeb58c1d098e0f9eeb200e9927d889b5a03c67097275dfb5fe463bd/: cache-043168d0e5a87283.arrow  cache-6adb3bbd7ea0c16f.arrow  cache-a9a39f75c73a0c3d.arrow  dataset_info.json
dockerfiles/: cloudbuild_predict.yaml  cloudbuild_train.yaml  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
emotions/: __init__.py  predict_model.py  train_model.py
emotions/data/: make_dataset.py
emotions/models/: model.py
reports/: README.md
tests/: test_data.py  test_model.py  test_train.py
